{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 89,
  "lineage": "9ff82363-00de-3cee-e469-79461ba7b131",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0210e3d42e4ebfebb",
            "id": "rtb-0210e3d42e4ebfebb",
            "owner_id": "214263680292",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default_route_table"
            },
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:214263680292:internet-gateway/igw-0602e9a8b60472d2e",
            "id": "igw-0602e9a8b60472d2e",
            "owner_id": "214263680292",
            "tags": {
              "Name": "cactus-igw"
            },
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0752604275c829aab",
            "owner_id": "214263680292",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0602e9a8b60472d2e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cactus_public_rt_01"
            },
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00a5fd8ff93b9f199",
            "owner_id": "214263680292",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0602e9a8b60472d2e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cactus_public_rt_02"
            },
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_rt_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054bd027393358ef2",
            "route_table_id": "rtb-0752604275c829aab",
            "subnet_id": "subnet-0e91f0007ef1bae89"
          },
          "depends_on": [
            "aws_route_table.public_route_01",
            "aws_subnet.public_subnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_rt_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05750a4d8bf1d0789",
            "route_table_id": "rtb-00a5fd8ff93b9f199",
            "subnet_id": "subnet-07afe65484c5f4643"
          },
          "depends_on": [
            "aws_route_table.public_route_02",
            "aws_subnet.public_subnet_02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_subnet_rt_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070badd11b8d7bac0",
            "route_table_id": "rtb-0210e3d42e4ebfebb",
            "subnet_id": "subnet-01a4a73fb47ae5238"
          },
          "depends_on": [
            "aws_default_route_table.private_route",
            "aws_subnet.private_subnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_subnet_rt_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09364dae5d975719d",
            "route_table_id": "rtb-0210e3d42e4ebfebb",
            "subnet_id": "subnet-004e1136bb2963908"
          },
          "depends_on": [
            "aws_default_route_table.private_route",
            "aws_subnet.private_subnet_02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:214263680292:security-group/sg-051644fb92b48a261",
            "description": "Test public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051644fb92b48a261",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "214263680292",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cactus_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:214263680292:subnet/subnet-01a4a73fb47ae5238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01a4a73fb47ae5238",
            "map_public_ip_on_launch": false,
            "owner_id": "214263680292",
            "tags": {
              "Name": "private_subnet_01"
            },
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:214263680292:subnet/subnet-004e1136bb2963908",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-004e1136bb2963908",
            "map_public_ip_on_launch": false,
            "owner_id": "214263680292",
            "tags": {
              "Name": "private_subnet_02"
            },
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:214263680292:subnet/subnet-0e91f0007ef1bae89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e91f0007ef1bae89",
            "map_public_ip_on_launch": true,
            "owner_id": "214263680292",
            "tags": {
              "Name": "public_subnet_01"
            },
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:214263680292:subnet/subnet-07afe65484c5f4643",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07afe65484c5f4643",
            "map_public_ip_on_launch": true,
            "owner_id": "214263680292",
            "tags": {
              "Name": "public_subnet_02"
            },
            "vpc_id": "vpc-05cda548f33270c3c"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:214263680292:vpc/vpc-05cda548f33270c3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce3b1ecac18822a4",
            "default_route_table_id": "rtb-0210e3d42e4ebfebb",
            "default_security_group_id": "sg-0f17a94c798a79739",
            "dhcp_options_id": "dopt-ab01b8c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05cda548f33270c3c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0210e3d42e4ebfebb",
            "owner_id": "214263680292",
            "tags": {
              "Name": "cactus-project"
            }
          }
        }
      ]
    }
  ]
}